--- a/vignettes/Application_EcologicalNetworksDataset.Rmd
+++ b/vignettes/Application_EcologicalNetworksDataset.Rmd
@@ -48,15 +48,13 @@ Les interactions de ces 17 réseaux sont de deux types, herbivorie–pollinisati
 herbivores, l des plantes et b des pollinisateurs) pour 16 d'entre eux et herbivorie–dispersion de graines (i.e. a sont des herbivores, l des plantes et b des espèces qui disséminent des graines) pour un d'entre eux. Par souci de clarté, on utilisera l’appellation commune d’espèces mutualistes pour l’ensemble des 17 réseaux.
 
 
-
-```{r loading dataset, eval=FALSE}
-#data(ecologicalNetworksDataset)
-```
+Pour des questions de publication de données, le jeu de réseaux d'origine $\texttt{ecologicalNetworksDataset}$ (avant ou après calibration MBM) n'est pas rendu disponible ici. 
+On peut néanmoins charger le résultat du calcul des métriques sur les blocs (voir plus bas).
 
 ### Preparation of the data
 
 ```{r prepare dataset, eval=TRUE}
-dataset_path=""
+dataset_path="data/ecologicalNetworksDataset/"
 dataset_names_MA <- c('Sinohara_1_ALL_PH', 'Sinohara_2_ALL_PH', 'Sinohara_3_ALL_PH', 'Sinohara_4_ALL_PH', 'Sinohara_ALL_A_PH', 
                       'Sinohara_ALL_E_PH', 'Sinohara_ALL_I_PH', 'Sinohara_2_E_PH', 'Sinohara_3_E_PH', 'Sinohara_4_I_PH', 
                       'Melian_OO_OO_PH', 'Hackett_1_ALL_PH', 'Hackett_2_ALL_PH', 'Hackett_1_S_PH', 'Hackett_1_GL_PH',
@@ -65,10 +63,6 @@ dataset_names_MA <- c('Sinohara_1_ALL_PH', 'Sinohara_2_ALL_PH', 'Sinohara_3_ALL_
 
 dataset_names<-dataset_names_MA
 Indices=1:17
-study_insectes_only=FALSE
-if (study_insectes_only){dataset_names[16]<-"PocockInsects_OO_OO_PH"
-                         Indices<-Indices[-c(11,17)]}
-
 ``` 
 
 ### Multipartite Block Model (MBM) 
@@ -108,17 +102,17 @@ La quantité $\theta_K=(\alpha,\pi)$, où $\alpha=\left(\alpha_{kk^\prime}^{qq^\
 ### Calibrate MBM and compute metrics
 Pour chaque réseau tripartite individuel, on calibre MBM et puis on s'intéresse aux blocs inférés dans les trois groupes d'espèces (GE).
 On fait le choix des 5 métriques suivantes pour classifier les blocs du groupe des connecteurs $l$, définies pour chaque bloc $k^\prime\in1,\dots,K_l$ d'un groupe de connecteurs $l$ donné : $$\left(\bar{c}_a, \bar{c}_b, \textrm{PR}_b^{sym}, \bar{c}_a^{\textrm{N}}, \bar{c}_b^{\textrm{N}}\right).$$
+On peut calculer les valeurs de métriques sur les blocs des $17$ réseaux grâce aux commandes suivantes.
 
-```{r compute metrics, eval=TRUE}
-#analyse<-analysisTripartiteSBM(dataset_path,dataset_names,Indices,quiet=TRUE)
+```{r compute metrics, eval=FALSE}
+analyseENetDataset<-analysisTripartiteSBM(dataset_path,dataset_names,Indices,quiet=TRUE)
 
-if (!study_insectes_only){
-  data(analyseEcologicalNetworksDataset)
-} else{
-  data(analyseEcologicalNetworksDataset_insects)
-}
+```
+On peut aussi directement charger depuis le package la table $\texttt{analyseENetDataset}$ contenant ces valeurs.
+```{r load metrics, eval=TRUE}
+data(analyseEcologicalNetworksDataset)
 
-str(analyse)
+str(analyseENetDataset)
 ```
 
 ## Caracterisation of the ecological structure
@@ -127,35 +121,25 @@ str(analyse)
 Les données issues des réseaux représentent $N=53$ blocs $k^\prime$ de plantes à classifier, en interactions avec $21$ blocs d'herbivores et $28$ blocs de mutualistes. 
 
 ```{r plot block analysis, eval=TRUE, fig.height=5, fig.width=8.5}
-plotAnalysisTripartiteSBM(analyse)
+plotAnalysisTripartiteSBM(analyseENetDataset)
 ```
 
 ### Preparation of caracterisation
 ```{r prepare caracterisation, eval=TRUE}
 FG="plants"
-if (!study_insectes_only){#For our analysis 1
-                          analysePlants<-analyse[analyse$FG==FG,]
-                          metrics<-c("c_inter1","c_inter2","PR_inter1_sym","cKnn_inter1","cKnn_inter2")
-                          order_clusters<-c(1,3,2,5,4,6)
-                          nb_clusters<-6
-                          plotIndicesblocs<-1:nrow(analysePlants)
-}else{#For our analysis 2 (insects only)
-      analysePlants<-analyse[analyse$FG==FG,]
-      metrics<-c("c_inter1","c_inter2","PR_inter1_sym","cKnn_inter1")
-      order_clusters<-c(2,1,3,5,4)
-      nb_clusters<-5
-      plotIndicesblocs<-1:nrow(analysePlants)
-      plotIndicesblocs<-plotIndicesblocs[-c(27,28,29,30)] #on enl?ve les 4 indices propres au r?seau 11 removed
-      last_indice_blocs<-plotIndicesblocs[length(plotIndicesblocs)]
-      plotIndicesblocs<-c(plotIndicesblocs,last_indice_blocs+1,last_indice_blocs+2,last_indice_blocs+3,last_indice_blocs+4) #on ajoute 4 derniers num?ros
-}
+analysePlants<-analyseENetDataset[analyseENetDataset$FG==FG,]
+metrics<-c("c_inter1","c_inter2","PR_inter1_sym","cKnn_inter1","cKnn_inter2")
+order_clusters<-c(1,3,2,5,4,6)
+nb_clusters<-6
+plotIndicesblocs<-1:nrow(analysePlants)
+
 ```
 
 
 ### Clustering analysis to caracterise blocks of plants
 
 ```{r compute caracterisation, eval=TRUE}
-caracterisation<-caracTripartiteSBM(analysePlants,metrics,order_clusters=order_clusters)
+caracterisation<-caracTripartiteSBM(analysePlants,metrics,nb_clusters)
 
 caracterisation$centers
 ```
@@ -166,23 +150,40 @@ plotCaracTripartiteSBM(caracterisation,plotIndicesblocs)
 
 ## Additionnal analyses
 
-### Second application, insects only
-
-
-```{r study only insect, eval=FALSE}
-study_insectes_only=TRUE
-```
 
 ### Appendix 1 : functional cartography
 Une façon d'illustrer les connectances partielles et taux de participation réside dans l'outil de la cartographie fonctionnelle ($\textit{functional cartography}$) introduite en écologie dans le célèbre @Guimera2005A, qui trace et classe des espèces dans un plan du type $(\textit{taux de participation}, \textit{degré})$.
 ```{r plot functional cartography, eval=FALSE}
-plotFunctionalCartography(analyse)
+plotFunctionalCartography(analyseENetDataset)
 ```
 
 ### Appendix 2 :degree-degree of neighbors inversion
 Dans les écosystèmes plantes--pollinisateurs, une inversion en moyenne du caractère spécialiste/généraliste entre les espèces et leurs voisins est reportée dans la littérature (@bascompte2003nested, @jordano1987patterns). Ici on propose de retrouver ce signal à l'échelle des blocs en traçant pour les plantes  et les pollinisateurs les courbes de connectances partielles $\bar c_b$ en fonction des connectances partielles moyennes des voisins $\bar c_b^{\textrm{N}}$ associées aux blocs des 16 réseaux de type herbivorie--pollinisation à l'étude.
 ```{r plot deg inversion, eval=FALSE}
 Indices_plantspollination<-Indices[-c(5,8,11,13,14,15,17)]
-plotDegInversion(analyse,Indices_plantspollination)
+plotDegInversion(analyseENetDataset,Indices_plantspollination)
+
 ```
+
+### Second application, insects only
+On peut mener une analyse analogue en ne retenant que des insectes parmi les herbivores, en ajoutant ou changeant les assertions suivantes :
+```{r study only insect, eval=FALSE}
+#For our analysis 2 (insects only)
+dataset_names<-dataset_names_MA
+dataset_names[16]<-"PocockInsects_OO_OO_PH"
+Indices=1:17
+Indices<-Indices[-c(11,17)]
+
+data(analyseEcologicalNetworksDataset_insects)
+
+analysePlants<-analyseENetDataset_insects[analyseENetDataset_insects$FG==FG,]
+metrics<-c("c_inter1","c_inter2","PR_inter1_sym","cKnn_inter1")
+order_clusters<-c(2,1,3,5,4)
+nb_clusters<-5
+plotIndicesblocs<-1:nrow(analysePlants)
+plotIndicesblocs<-plotIndicesblocs[-c(27,28,29,30)] #on enl?ve les 4 indices propres au r?seau 11 removed
+last_indice_blocs<-plotIndicesblocs[length(plotIndicesblocs)]
+plotIndicesblocs<-c(plotIndicesblocs,last_indice_blocs+1,last_indice_blocs+2,last_indice_blocs+3,last_indice_blocs+4) #on ajoute 4 derniers num?ros
+```
+
 ---
