--- a/vignettes/Application_EcologicalNetworksDataset.Rmd
+++ b/vignettes/Application_EcologicalNetworksDataset.Rmd
@@ -33,19 +33,16 @@ library(analysisMultipartiteSBM)
 ### A new collection of networks
 
 
-Notre étude est motivée par une nouvelle collection de 42 réseaux tripartites récemment rassemblée et préparée par Virginia Domínguez-García dans @dominguez2021notes à partir des principales études écologiques multipartites existant dans la
+Notre étude est motivée par une nouvelle collection de réseaux tripartites récemment rassemblée et préparée par Virginia Domínguez-García dans @dominguez2021notes à partir des principales études écologiques multipartites existant dans la
 littérature. Les réseaux collectés sont issus de zones géographiques - et donc de type d’espèces, climat, nature
-des sols - différentes compte tenu de la grande variété des pays d’origine des études sources (@melian2009diversity, @shinohara2019contrasting, @pocock2012robustness, @hackett2019reshaping, @macfadyen2009differences et @dattilo2016unravelling).
-Il s’agit néanmoins du premier jeu de réseaux écologiques multipartites réels unifiant différents travaux
-écologiques et le seul de cette ampleur.
-Les données comprennent 44 réseaux tripartites structurés comme ci-dessus, dont les deux interactions
-bipartites sont de trois natures différentes : mutualiste–antagoniste (MA), antagoniste–antagoniste (AA)
-et mutualiste–mutualiste (MM).
+des sols - différentes compte tenu de la grande variété des pays d’origine des études sources (@melian2009diversity, @shinohara2019contrasting, @pocock2012robustness, @hackett2019reshaping, @macfadyen2009differences et @dattilo2016unravelling). Il s’agit néanmoins du premier jeu de réseaux écologiques multipartites réels unifiant différents travaux écologiques et le seul de cette ampleur. Les données comprennent $44$ réseaux tripartites, dont les deux interactions bipartites sont de trois natures différentes : mutualiste–antagoniste (MA), antagoniste–antagoniste (AA)
+et mutualiste–mutualiste (MM). 
+
+La structure de ces réseaux est la suivante : si l'ensemble des groupes d'espèces (GE) est donné par $\{a,l,b\}$ on suppose aussi que les seules interactions possibles sont données par $\mathcal E=\{(a,l),(b,l)\}$ ; il y a deux interactions bipartites $a\leftrightarrow l$ et $b\leftrightarrow l$, entre chacun des groupes de périphériques (i.e. contenant des espèces périphériques) $a$ ou $b$ et le  groupe des connecteurs $l$ (linking set) qui contient les espèces connectrices.
 
 
-Les données utilisées sont les 17 réseaux de type mutualiste-antagoniste (MA) de ce jeu de données tripartites.
-Les interactions de ces 17 réseaux sont de deux types, herbivorie–pollinisation (i.e. a sont des
-herbivores, l des plantes et b des pollinisateurs) pour 16 d'entre eux et herbivorie–dispersion de graines (i.e. a sont des herbivores, l des plantes et b des espèces qui disséminent des graines) pour un d'entre eux. Par souci de clarté, on utilisera l’appellation commune d’espèces mutualistes pour l’ensemble des 17 réseaux.
+Les données utilisées dans notre étude sont les $17$ réseaux de type mutualiste-antagoniste (MA) de ce jeu de données tripartites. Les interactions de ces $17$ réseaux sont de deux types, herbivorie–pollinisation (i.e. a sont des
+herbivores, l des plantes et b des pollinisateurs) pour $16$ d'entre eux et herbivorie–dispersion de graines (i.e. a sont des herbivores, l des plantes et b des espèces qui disséminent des graines) pour un d'entre eux. Par souci de clarté, on utilisera l’appellation commune d’espèces mutualistes pour l’ensemble des $17$ réseaux.
 
 
 Pour des questions de publication de données, le jeu de réseaux d'origine $\texttt{ecologicalNetworksDataset}$ (avant ou après calibration MBM) n'est pas rendu disponible ici. 
@@ -101,7 +98,7 @@ La quantité $\theta_K=(\alpha,\pi)$, où $\alpha=\left(\alpha_{kk^\prime}^{qq^\
 
 ### Calibrate MBM and compute metrics
 Pour chaque réseau tripartite individuel, on calibre MBM et puis on s'intéresse aux blocs inférés dans les trois groupes d'espèces (GE).
-On fait le choix des 5 métriques suivantes pour classifier les blocs du groupe des connecteurs $l$, définies pour chaque bloc $k^\prime\in1,\dots,K_l$ d'un groupe de connecteurs $l$ donné : $$\left(\bar{c}_a, \bar{c}_b, \textrm{PR}_b^{sym}, \bar{c}_a^{\textrm{N}}, \bar{c}_b^{\textrm{N}}\right).$$
+On fait le choix des $5$ métriques suivantes pour classifier les blocs du groupe des connecteurs $l$, définies pour chaque bloc $k^\prime\in1,\dots,K_l$ d'un groupe de connecteurs $l$ donné : $$\left(\bar{c}_a, \bar{c}_b, \textrm{PR}_b^{sym}, \bar{c}_a^{\textrm{N}}, \bar{c}_b^{\textrm{N}}\right).$$
 On peut calculer les valeurs de métriques sur les blocs des $17$ réseaux grâce aux commandes suivantes.
 
 ```{r compute metrics, eval=FALSE}
@@ -148,17 +145,17 @@ caracterisation$centers
 plotCaracTripartiteSBM(caracterisation,new.window=FALSE)
 ```
 
-## Additionnal analyses
+## Additional analyses
 
 
 ### Appendix 1 : functional cartography
-Une façon d'illustrer les connectances partielles et taux de participation réside dans l'outil de la cartographie fonctionnelle ($\textit{functional cartography}$) introduite en écologie dans le célèbre @Guimera2005A, qui trace et classe des espèces dans un plan du type $(\textit{taux de participation}, \textit{degré})$.
-```{r plot functional cartography, eval=TRUE, fig.height=6, fig.width=6, fig.align="center"}
+Une façon d'illustrer les connectances partielles et taux de participation réside dans l'outil de la cartographie fonctionnelle (functional cartography) introduite en écologie dans le célèbre @Guimera2005A, qui trace et classe des espèces dans un plan du type $(\textit{taux de participation}, \textit{degré})$.
+```{r plot functional cartography, eval=TRUE, fig.height=5, fig.width=5, fig.align="center"}
 plotFunctionalCartography(analyseENetDataset,new.window=FALSE)
 ```
 
 ### Appendix 2 :degree-degree of neighbors inversion
-Dans les écosystèmes plantes--pollinisateurs, une inversion en moyenne du caractère spécialiste/généraliste entre les espèces et leurs voisins est reportée dans la littérature (@bascompte2003nested, @jordano1987patterns). Ici on propose de retrouver ce signal à l'échelle des blocs en traçant pour les plantes  et les pollinisateurs les courbes de connectances partielles $\bar c_b$ en fonction des connectances partielles moyennes des voisins $\bar c_b^{\textrm{N}}$ associées aux blocs des 16 réseaux de type herbivorie--pollinisation à l'étude.
+Dans les écosystèmes plantes--pollinisateurs, une inversion en moyenne du caractère spécialiste/généraliste entre les espèces et leurs voisins est reportée dans la littérature (@bascompte2003nested, @jordano1987patterns). Ici on propose de retrouver ce signal à l'échelle des blocs en traçant pour les plantes  et les pollinisateurs les courbes de connectances partielles $\bar c_b$ en fonction des connectances partielles moyennes des voisins $\bar c_b^{\textrm{N}}$ associées aux blocs des $16$ réseaux de type herbivorie--pollinisation à l'étude.
 ```{r plot deg inversion, eval=TRUE, fig.height=4, fig.width=8.5}
 Indices_plantspollination<-Indices[-c(5,8,11,13,14,15,17)]
 plotDegInversion(analyseENetDataset,Indices_plantspollination,new.window=FALSE)
@@ -166,20 +163,19 @@ plotDegInversion(analyseENetDataset,Indices_plantspollination,new.window=FALSE)
 ```
 
 ### Additional materials
-One can plot the individual blocks' distributions in clusters, per network.
-```{r plot block caracterisation distrib, eval=TRUE, fig.height=6, fig.width=8.5}
-#plotCaracTripartiteSBM(caracterisation,plot.type="distrib.networks",new.window=FALSE)
+On peut afficher les distributions individuelles des blocs parmi les clusters au sein de chaque réseau.
+```{r plot block caracterisation distrib, eval=TRUE, fig.height=4.5, fig.width=9}
+plotCaracTripartiteSBM(caracterisation,plot.type="distrib.networks",new.window=FALSE)
 ```
-The Multidimensional Scaling (MDS) can also be plotted.
-```{r plot block caracterisation mds, eval=TRUE, fig.height=6, fig.width=6}
-#plotCaracTripartiteSBM(caracterisation,plot.type="mds",new.window=FALSE)
+Le plan de positionnement (Multidimensional Scaling, ou MDS) peut aussi être affiché.
+```{r plot block caracterisation mds, eval=TRUE, fig.height=3.5, fig.width=4, fig.align="center"}
+plotCaracTripartiteSBM(caracterisation,plot.type="mds",new.window=FALSE)
 ```
 
 
 ### Second application : caracterisation with insects only
 On peut mener une analyse analogue en ne retenant que des insectes parmi les herbivores, en ajoutant ou changeant les assertions suivantes :
 ```{r study only insect, eval=FALSE}
-#For our analysis 2 (insects only)
 dataset_names<-dataset_names_MA
 dataset_names[16]<-"PocockInsects_OO_OO_PH"
 Indices=1:17
@@ -192,12 +188,14 @@ metrics<-c("c_inter1","c_inter2","PR_inter1_sym","cKnn_inter1")
 order_clusters<-c(2,1,3,5,4)
 nb_clusters<-5
 plotIndicesblocs<-1:nrow(analysePlants)
-plotIndicesblocs<-plotIndicesblocs[-c(27,28,29,30)] #on enl?ve les 4 indices propres au r?seau 11 removed
+#on enl?ve les 4 indices propres au r?seau 11 
+plotIndicesblocs<-plotIndicesblocs[-c(27,28,29,30)] 
 last_indice_blocs<-plotIndicesblocs[length(plotIndicesblocs)]
-plotIndicesblocs<-c(plotIndicesblocs,last_indice_blocs+1,last_indice_blocs+2,last_indice_blocs+3,last_indice_blocs+4) #on ajoute 4 derniers num?ros
-
+#on ajoute 4 derniers num?ros
+plotIndicesblocs<-c(plotIndicesblocs,last_indice_blocs+1,last_indice_blocs+2,last_indice_blocs+3,last_indice_blocs+4) 
 
 plotCaracTripartiteSBM(caracterisation,plotIndicesblocs)
 ```
 
 ---
+## References
